; ModuleID = '/home/carl/AnghaBench/stb/deprecated/extr_stb_image.c_stbi_info_from_file.c'
source_filename = "/home/carl/AnghaBench/stb/deprecated/extr_stb_image.c_stbi_info_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stbi_info_from_file(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @ftell(i32* %12)
  store i64 %13, i64* %11, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @start_file(i32* %10, i32* %14)
  %16 = load i32*, i32** %6, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @stbi_info_main(i32* %10, i32* %16, i32* %17, i32* %18)
  store i32 %19, i32* %9, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i32, i32* @SEEK_SET, align 4
  %23 = call i32 @fseek(i32* %20, i64 %21, i32 %22)
  %24 = load i32, i32* %9, align 4
  ret i32 %24
}

declare dso_local i64 @ftell(i32*) #1

declare dso_local i32 @start_file(i32*, i32*) #1

declare dso_local i32 @stbi_info_main(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @fseek(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
